Fix warnings: add @SuppressWarnings for raw types, replace deprecated constructors, add missing javadoc tags
Co-authored-by: laeubi <1331477+laeubi@users.noreply.github.com>